# surestride_portfolio

./: .procfile  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1d0f1b6d6046_add_vector_migration.py  215dc21a8163_change_id_to_autoincrement_and_int.py  42a6c346a0f3_updated_user_table_with_autoincrement_.py  4fe09494574a_fix_schema_issues.py  cd43f0088635_fix_user_id_type.py  f207cbb017c8_initial_migration.py  f635821a0206_updated_user_table_with_autoincrement_.py  fbbd4667baf3_add_new_table_for_rag_retrievel.py
app/db/: db.sqlite  db_init.py  models.py  utils.py
app/routes/: __init__.py  auth_router.py  chat_router.py  public_router.py
app/services/: chatbot.py  db.sqlite  extract_pdf_to_database.py  load_rag_data_to_database.py  structured_outputs.py
app/services/tools/: __init__.py  tavily_search_tool.py
app/static/css/: styles.css
app/static/files/: documents.json  documents.txt  guidelines.json
app/templates/: about.html  auth.html  base.html  certificates.html  chat.html  index.html  legal_stuff.html  nav.html  projects.html  register.html  web_tech_stack.html
