[project]
name = "surestride-portfolio"
version = "0.1.0"
description = "portfolio for surestride"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "alembic>=1.15.2",
    "bcrypt>=4.3.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "fastapi-sqlmodel>=0.0.1",
    "gunicorn>=23.0.0",
    "huggingface-hub>=0.30.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "openai>=1.70.0",
    "passlib>=1.7.4",
    "pyjwt>=2.10.1",
    "pymupdf>=1.25.5",
    "python-multipart>=0.0.20",
    "regex>=2024.11.6",
    "ruff>=0.11.2",
    "sentence-transformers>=4.0.2",
    "sqlmodel>=0.0.24",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "transformers>=4.51.0",
    "uvicorn>=0.34.0",
]
