[project]
name = "surestride-portfolio"
version = "0.1.0"
description = "portfolio for surestride"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "bcrypt>=4.3.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "fastapi-sqlmodel>=0.0.1",
    "gunicorn>=23.0.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.12",
    "langgraph>=0.3.25",
    "markdown>=3.7",
    "openai>=1.70.0",
    "passlib>=1.7.4",
    "pymupdf>=1.25.5",
    "python-multipart>=0.0.20",
    "regex>=2024.11.6",
    "ruff>=0.11.2",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
]
